Fixing Dark mode toggle is not reachable with keyboard navigation

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -3,6 +3,8 @@
 }
 
 .theme--button {
+  text-decoration: none;
+  color: inherit;
   margin-left: 1rem;
   cursor: pointer;
 }
